Closed Bug 1560582 Opened 5 years ago Closed 5 years ago

Crash in [@ OOM | large | mozalloc_abort | mozalloc_handle_oom | moz_xrealloc | SkGlyphRunListPainter::drawForBitmapDevice]

Categories

(Core :: Graphics, defect)

68 Branch
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- unaffected
firefox68 --- fixed
firefox69 --- fixed

People

(Reporter: philipp, Assigned: lsalzman)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [tbird crash])

Crash Data

Attachments

(1 file)

This bug is for crash report bp-8abb908d-fa99-4a23-b8c4-ff8b60190621.

Top 10 frames of crashing thread:

0 mozglue.dll mozalloc_abort memory/mozalloc/mozalloc_abort.cpp:33
1 mozglue.dll mozalloc_handle_oom memory/mozalloc/mozalloc_oom.cpp:51
2 mozglue.dll moz_xrealloc memory/mozalloc/mozalloc.cpp:90
3 xul.dll SkGlyphRunListPainter::drawForBitmapDevice gfx/skia/skia/src/core/SkGlyphRunPainter.cpp:237
4 xul.dll void SkBitmapDevice::drawGlyphRunList gfx/skia/skia/src/core/SkBitmapDevice.cpp:541
5 xul.dll SkGlyphRunBuilder::drawTextBlob gfx/skia/skia/src/core/SkGlyphRun.cpp:232
6 xul.dll SkCanvas::onDrawTextBlob gfx/skia/skia/src/core/SkCanvas.cpp:2552
7 xul.dll SkCanvas::drawTextBlob gfx/skia/skia/src/core/SkCanvas.cpp:2573
8 xul.dll void mozilla::gfx::DrawTargetSkia::DrawGlyphs gfx/2d/DrawTargetSkia.cpp:1384
9 xul.dll void mozilla::gfx::DrawTargetSkia::FillGlyphs gfx/2d/DrawTargetSkia.cpp:1390

this is a low-to-mid-volume signature newly showing up in firefox 68 (not seeing it in 69.0a1 anymore) - 32bit installations are more commonly affected by this oom crash.
it seems linked to the skia update in bug 1539026.

Whiteboard: [tbird crash]
Flags: needinfo?(lsalzman)
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e57ef2080d3f
limit Skia glyph batch sizes. r=jrmuizel

This patch should limit Skia's allocations to sane sizes for us so that we aren't OOMing.

Flags: needinfo?(lsalzman)
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Assignee: nobody → lsalzman

Comment on attachment 9074418 [details]
Bug 1560582 - limit Skia glyph batch sizes. r?jrmuizel

Beta/Release Uplift Approval Request

  • User impact if declined: Potential OOM crashes when rendering web pages with lots of text.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just makes text render in smaller batches to limit memory allocations.
  • String changes made/needed:
Attachment #9074418 - Flags: approval-mozilla-beta?

Comment on attachment 9074418 [details]
Bug 1560582 - limit Skia glyph batch sizes. r?jrmuizel

Fixes an OOM crash regression caused by the Skia update shipping in 68. Approved for 68rc1.

Attachment #9074418 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: