Bug 1560582 - limit Skia glyph batch sizes. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D36148

--HG--
extra : moz-landing-system : lando